# rust-scrapper

./: Cargo.toml
src/: errors.rs  holiday_processor.rs  lib.rs  main.rs  scraper_client.rs
