[package]
name = "rust-assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.8", features = ["json", "stream"]}
tokio = { version = "1.40.0", features = ["full"] }
regex = "1.11.0"
async-trait = "0.1.83"
scraper = "0.20.0"
thiserror = "1.0.64"
log = "0.4.22"
rusqlite = { version = "0.32.1", features = ["bundled"] }
env_logger = "0.11.5"

